@@ -81,7 +81,8 @@ Effects:
 
   o New `stats' effect; multichannel audio statistics.  (robs)
   o New `sinc' FFT filter effect; replacement for `filter'.  (robs)
-  o New `fir' filter effect using external coefficients file.  (robs)
+  o New `fir' filter effect using external coefficients/file.  (robs)
+  o New `biquad' filter effect using external coefficients.  (robs)
   o New `overdrive' effect.  (robs)
   o New `pluck' and `tpdf' types for `synth'.  (robs)
   o Can now set common parameters for multiple `synth' channels.  (robs)
